@@ -34,13 +34,13 @@ mkfontscale_SOURCES = \
 	list.h \
 	mkfontscale.c
 
-appman_SOURCES = mkfontscale.man
+appman_PRE = mkfontscale.man
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
